# bob.pipelines

./: .gitignore  LICENSE  MANIFEST.in  README.md  README.rst  buildout.cfg  pyproject.toml  requirements.txt  setup.py
bob/pipelines/: __init__.py  datasets.py  mixins.py  sample.py  sample_loaders.py  utils.py  wrappers.py  xarray.py
bob/pipelines/bob_bio/: annotated_blocks.py  blocks.py  pipelines.py  samples.py  simple_blocks.py  simple_pipeline.py
bob/pipelines/config/baselines/: facecrop_pca.py
bob/pipelines/config/databases/: mobio_male.py
bob/pipelines/config/distributed/: dask_it_pipeline.py  local_p16.py  local_p4.py  local_parallel.py  local_single_thread.py  sge_default.py  sge_demanding.py  sge_gpu.py  sge_io_big_non_adaptive.py  sge_iobig_16cores.py  sge_iobig_16cores_1gpu.py  sge_iobig_48cores.py  sge_light.py
bob/pipelines/configs/grid/: local.py  sge.py
bob/pipelines/datasets/: __init__.py  csv.py  json.py  sample_loaders.py
bob/pipelines/distributed/: __init__.py  local.py  sge.py  sge_queues.py
bob/pipelines/mixins/: __init__.py  mixins.py
bob/pipelines/processor/: __init__.py  processor.py
bob/pipelines/sample/: __init__.py  sample.py
bob/pipelines/samples/: biometric_samples.py  samples.py
bob/pipelines/script/: __init__.py  biometrics.py  pipelines.py  run.py
bob/pipelines/scripts/: __init__.py
bob/pipelines/test/: test_mixins.py  test_processor.py  test_samples.py
bob/pipelines/tests/: test_datasets.py  test_sample_loaders.py  test_samples.py  test_transformers.py  test_utils.py  test_wrappers.py  test_xarray.py
bob/pipelines/tests/data/iris_database/default/: test.csv
bob/pipelines/tests/data/samples/: 1.pos  2.pos  samples.csv
bob/pipelines/transformers/: __init__.py  dask.py  file_loader.py  function.py  linearize.py  pca.py  str_to_types.py
conda/: meta.yaml
doc/: catalog.json  checkpoint.rst  conf.py  dask.rst  datasets.rst  estimator.rst  extra-intersphinx.txt  index.rst  links.rst  nitpick-exceptions.txt  pipeline.rst  py_api.rst  sample.rst  xarray.rst
doc/_static/: copybutton.js
doc/python/: delayed_sample.pkl  pipeline_example.py  pipeline_example_boosted.py  pipeline_example_boosted_checkpoint.py  pipeline_example_boosted_checkpoint_estimator.py  pipeline_example_boosted_delayed.py  pipeline_example_boosted_sample_set.py  pipeline_example_dask.py  pipeline_example_dask_sge.py  pipeline_example_dask_sge_adaptive.py
src/bob/pipelines/: __init__.py  datasets.py  sample.py  utils.py  wrappers.py  xarray.py
src/bob/pipelines/config/distributed/: local_p32.py  local_p8.py  local_parallel.py  sge_io_big.py
src/bob/pipelines/dataset/: __init__.py  database.py
src/bob/pipelines/dataset/protocols/: __init__.py  archive.py  hashing.py  retrieve.py
src/bob/pipelines/distributed/: __init__.py  sge.py
src/bob/pipelines/protocols/: __init__.py  archive.py  retrieve.py
tests/: test_database.py  test_datasets.py  test_samples.py  test_utils.py  test_wrappers.py  test_xarray.py
tests/data/iris_database/default/: train.csv
tests/data/samples/: 1.json  2.json
